openshift/templates/blog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
spec:
  ports:
  - name: web
    port: 8080
    targetPort: 8080
  selector:
    app: blog
