openshift/templates/blog/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: blog
spec:
  to:
    kind: Service
    name: blog
